fix incorrect import, use Arrays.asList(), addresses #33